PDF callback
